--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 REACT_APP_SOCKET_URL=http://localhost:5001
 
 REACT_APP_API_BASE_URL=https://whiteboard-backend.onrender.com
+VITE_API_BASE_URL=https://whiteboard-development.onrender.com
